Fix logo spacing and add placeholders for informational pages

--- a/src/components/logoComponent/LogoComponent.css
+++ b/src/components/logoComponent/LogoComponent.css
@@ -19,7 +19,7 @@
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-weight: bold;
     font-size: 2em;
-    color: darkred;
+    color: rgb(142,24,27);
     top: 25vh;
 }
 
